--- a/src/app/pages/dte/audience/import/import-audience-dialog.component.html
+++ b/src/app/pages/dte/audience/import/import-audience-dialog.component.html
@@ -45,11 +45,11 @@
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column name="No. Ponsel" prop="phone">
+        <!-- <ngx-datatable-column name="No. Ponsel" prop="phone">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             {{ row.phone }}
           </ng-template>
-        </ngx-datatable-column>
+        </ngx-datatable-column> -->
 
         <ngx-datatable-column name="Kode" prop="code">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
@@ -75,7 +75,7 @@
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column name="Divisi" prop="division_code">
+        <!-- <ngx-datatable-column name="Divisi" prop="division_code">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             {{ row.division_code }}
           </ng-template>
@@ -91,7 +91,7 @@
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             {{ row.area_code }}
           </ng-template>
-        </ngx-datatable-column>
+        </ngx-datatable-column> -->
 
         <ngx-datatable-column name="Alasan Tidak Valid" prop="reason">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
