--- a/src/app/pages/dte/audience/create/audience-create.component.html
+++ b/src/app/pages/dte/audience/create/audience-create.component.html
@@ -493,12 +493,12 @@
           </ng-template>
         </ngx-datatable-column>
         <ngx-datatable-column name="Penjual" prop="name"></ngx-datatable-column>
-        <ngx-datatable-column
+        <!-- <ngx-datatable-column
           name="No Ponsel"
           [width]="180"
           prop="phone"
           [sortable]="false"
-        ></ngx-datatable-column>
+        ></ngx-datatable-column> -->
         <ngx-datatable-column name="Kode" prop="code"></ngx-datatable-column>
         <ngx-datatable-column
           name="Tipe"
@@ -535,21 +535,21 @@
             <span *ngIf="row.status === 'not-registered'">No</span>
           </ng-template>
         </ngx-datatable-column>
-        <ngx-datatable-column
+        <!-- <ngx-datatable-column
           name="Kode Divisi"
           prop="division_code"
           [sortable]="false"
-        ></ngx-datatable-column>
-        <ngx-datatable-column
+        ></ngx-datatable-column> -->
+        <!-- <ngx-datatable-column
           name="Wilayah"
           prop="region_code"
           [sortable]="false"
-        ></ngx-datatable-column>
-        <ngx-datatable-column
+        ></ngx-datatable-column> -->
+        <!-- <ngx-datatable-column
           name="Area"
           prop="area_code"
           [sortable]="false"
-        ></ngx-datatable-column>
+        ></ngx-datatable-column> -->
       </ngx-datatable>
     </div>
 
