--- a/src/app/pages/user-management/retailer/import-access-cashier-dialog/import-access-cashier-dialog.component.html
+++ b/src/app/pages/user-management/retailer/import-access-cashier-dialog/import-access-cashier-dialog.component.html
@@ -51,7 +51,7 @@
               {{ item.cashier }}
             </td>
             <td nowrap>
-              {{ item.is_chat_bot === '1' ? "ON" : "OFF" }}
+              {{ item.is_chat_bot === 1 ? "ON" : "OFF" }}
             </td>
           </tr>
           <tr *ngIf="rows.length === 0">
