--- a/src/app/pages/dte/task-verification/detail-tsm/task-verification-detail-tsm.component.html
+++ b/src/app/pages/dte/task-verification/detail-tsm/task-verification-detail-tsm.component.html
@@ -233,7 +233,7 @@
             (select)="onSelect($event)" fusePerfectScrollbar> -->
             <ngx-datatable-column name="Retailer Id" prop="id" [sortable]="false"></ngx-datatable-column>
             <ngx-datatable-column name="Customer Code" prop="code" [sortable]="false"></ngx-datatable-column>
-            <ngx-datatable-column name="No Hp" prop="nomor_hp" [sortable]="false"></ngx-datatable-column>
+            <!-- <ngx-datatable-column name="No Hp" prop="nomor_hp" [sortable]="false"></ngx-datatable-column> -->
             <ngx-datatable-column name="Nama Retailer" prop="name"></ngx-datatable-column>
             <ngx-datatable-column name="Area" prop="area_code" [sortable]="false"></ngx-datatable-column>
             <ngx-datatable-column name="Region" prop="region_code" [sortable]="false"></ngx-datatable-column>
