--- a/src/app/pages/dte/audience/create/audience-create.component.html
+++ b/src/app/pages/dte/audience/create/audience-create.component.html
@@ -454,7 +454,8 @@
         (sort)="onSort($event)"
         fusePerfectScrollbar
       >
-        <ngx-datatable-column
+        <!-- [rowIdentity]="getIdFunction()" -->
+        <!-- <ngx-datatable-column
           [width]="68"
           *ngIf="formAudience.get('limit').value !== 'pick-all'"
           [canAutoResize]="false"
@@ -491,7 +492,33 @@
             >
             </mat-checkbox>
           </ng-template>
+        </ngx-datatable-column> -->
+
+        <ngx-datatable-column [width]="68" [canAutoResize]="false" [sortable]="true">
+          <ng-template ngx-datatable-header-template let-value="value" let-allRowsSelected="allRowsSelected"
+            let-selectFn="selectFn">
+            <mat-checkbox [checked]="allRowsSelected" (change)="selectFn(!allRowsSelected)"></mat-checkbox>
+          </ng-template>
+
+          <ng-template ngx-datatable-cell-template let-value="value" let-isSelected="isSelected"
+            let-onCheckboxChangeFn="onCheckboxChangeFn">
+            <mat-checkbox [checked]="isSelected" (change)="onCheckboxChangeFn($event)"></mat-checkbox>
+          </ng-template>
         </ngx-datatable-column>
+
+
+        <!-- <ngx-datatable-column
+          [sortable]="false"
+          [canAutoResize]="false"
+          [draggable]="false"
+          [resizeable]="false"
+          [headerCheckboxable]="true"
+          [checkboxable]="true"
+        >
+        </ngx-datatable-column> -->
+
+
+
         <ngx-datatable-column name="Penjual" prop="name"></ngx-datatable-column>
         <!-- <ngx-datatable-column
           name="No Ponsel"
