--- a/src/app/pages/user-management/wholesaler/edit/wholesaler-edit.component.html
+++ b/src/app/pages/user-management/wholesaler/edit/wholesaler-edit.component.html
@@ -209,15 +209,7 @@
               </mat-error>
             </mat-form-field>
           </div>
-          <div fxFlex="100" fxLayout="row wrap" fxLayout.lt-md="column" class="py-16" fxLayoutGap="20px"
-          fxLayoutGap.lt-md="0px" fxLayoutAlign="start stretch">
-              <mat-form-field fxFlex="31%" class="is-light form-primary" fxLayoutGap="20px">
-                <mat-select placeholder="GSW" formControlName="gsw">
-                  <mat-option *ngFor="let item of listGsw" [value]="item.value">{{item.name}}</mat-option>
-                </mat-select>
-              </mat-form-field>
-          </div>
-
+          <mat-slide-toggle formControlName="gswName">GSW</mat-slide-toggle>
           <div fxLayout="row" *ngIf="seeTokoCabang">
             <mat-checkbox class="mt-4 ml-4 mb-8" formControlName="branchShop">Mempunyai
               Toko Cabang</mat-checkbox>
@@ -228,19 +220,17 @@
               <input matInput type="number" [formControl]="frmTotalBranch" placeholder="Jumlah Toko Cabang">
             </mat-form-field>
           </div>
-
           <!-- <mat-form-field fxFlex="100" class="is-light">
               <input matInput placeholder="Kata Sandi Baru" type="password" formControlName="password">
             </mat-form-field>
             <mat-form-field fxFlex="100" class="is-light">
               <input matInput placeholder="Konfirmasi Kata Sandi" type="password" formControlName="confirmation_password">
             </mat-form-field> -->
-
           <!-- <div class="btn-confirm" fxLayout="row" fxLayoutGap="25px">
               <button mat-stroked-button>Reset Password</button>
             </div> -->
-
-          <div *ngIf="!isDetail && !disableSubmit" class="confirm btn-confirm py-24" fxLayout="row" fxLayoutGap="25px">
+            
+          <div *ngIf="isDetail && disableSubmit" class="confirm btn-confirm py-24" fxLayout="row" fxLayoutGap="25px">
             <button mat-raised-button type="button" class="confirmation-button" fxFlex="20" (click)="submit()">
               SIMPAN
             </button>
