--- a/src/app/pages/user-management/wholesaler/index/wholesaler-index.component.html
+++ b/src/app/pages/user-management/wholesaler/index/wholesaler-index.component.html
@@ -18,7 +18,10 @@
       <!-- <button mat-raised-button type="button" class="is-danger" (click)="import()">
         <mat-icon>arrow_downward</mat-icon> Import XLS
       </button> -->
-      <button (click)="export()" mat-raised-button type="button" class="is-danger">
+      <button mat-raised-button type="button" class="is-danger" (click)="import()">
+        <mat-icon>arrow_downward</mat-icon> Import XLS
+      </button>
+      <button (click)="exportwholesaler()" mat-raised-button type="button" class="is-danger">
         <mat-icon>arrow_upward</mat-icon> Export XLS
       </button>
     </div>
@@ -87,8 +90,9 @@
                 item.code}}</mat-option>
             </mat-select>
           </mat-form-field>
-          <mat-form-field fxFlex="10.5%" class="is-light form-primary">
-            <mat-select placeholder="GSW" formControlName="gsw">
+          
+          <mat-form-field fxFlex="20" class="is-light form-primary">
+            <mat-select placeholder="GSW" [formControl]="gsw">
               <mat-option *ngFor="let item of listGsw" [value]="item.value">{{item.name}}</mat-option>
             </mat-select>
           </mat-form-field>
@@ -124,8 +128,12 @@
         </ngx-datatable-column>
 
         <ngx-datatable-column name="Kode WS" prop="code" summary-template="activeCell"></ngx-datatable-column>
-        
-        <ngx-datatable-column name="GSW" prop="gsw"></ngx-datatable-column>
+
+        <ngx-datatable-column name="GSW" prop="GSW">
+          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+            {{row.gsw == '1' ? 'ON' : 'OFF'}}
+          </ng-template>
+        </ngx-datatable-column>
 
         <ngx-datatable-column [width]="120" name="Status" prop="status">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
