--- a/src/app/pages/dte/task-verification/detail-tsm/task-verification-detail-tsm.component.html
+++ b/src/app/pages/dte/task-verification/detail-tsm/task-verification-detail-tsm.component.html
@@ -99,7 +99,12 @@
                   </h3>
                 </div> -->
               </div>
+
               <div fxLayout="row wrap" fxLayout.lt-md="column" class="p-24" fxLayoutGap="25px" fxLayoutGap.lt-md="0px">
+
+
+
+
                 <mat-form-field fxFlex="45%" class="is-light form-primary">
                   <input matInput type="text" placeholder="Template Tugas" [value]="dataTsm.task_sequencing_management_template_name"
                     disabled>
@@ -163,6 +168,27 @@
         </form>
 
         <form [formGroup]="formFilter" autoComplete="off">
+
+
+          <div
+            fxLayout="row wrap"
+            fxLayoutAlign="end stretch"
+            fxLayout.lt-md="column"
+            class="p-16 px-24"
+            fxLayoutGap="20px"
+            fxLayoutGap.lt-md="0px"
+            >
+            <button
+              mat-raised-button
+              type="button"
+              class="confirmation-button"
+              (click)="loadFormFilter()"
+              fxFlex="20"
+            >
+              Load Data
+            </button>
+          </div>
+
           <div fxLayout="row wrap" fxLayoutAlign="space-between stretch" fxLayout.lt-md="column" class="p-16"
             fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
             <mat-form-field fxFlex="12%" class="is-light form-primary">
